--- a/portfolio.html
+++ b/portfolio.html
@@ -20,44 +20,40 @@
   </head>
   <body>
     <header class="header">
-      <div class="header__body container">
+      <div class="header__body">
         <a class="logo" href="#">
-          <span class="logo__web span">Web</span>
-          <span class="span">Studio</span>
+          <span class="logo__web">Web</span>
+          <span class="logo__span">Studio</span>
         </a>
         <nav class="navigation">
           <ul class="navigation__list">
-            <li class="navigation__element">
-              <a class="navigation highlight transition" href="index.html">Agencja</a>
+            <li class="navigation__item">
+              <a class="navigation navigation__link" href="index.html">Agencja</a>
             </li>
-            <li class="navigation__element">
+            <li class="navigation__item">
               <a
-                class="transition navigation highlight navigation__link underline"
+                class="navigation navigation__link--padding navigation__link--underline"
                 href="portfolio.html"
                 >Portfolio</a
               >
             </li>
-            <li class="navigation__element">
-              <a class="navigation highlight transition" href="">Kontakty</a>
+            <li class="navigation__item">
+              <a class="navigation__link transition" href="">Kontakty</a>
             </li>
           </ul>
         </nav>
         <div class="address">
-          <div class="address__section transition">
-            <svg width="16" height="12" class="address__icon highlight transition">
+          <div class="address__section">
+            <svg width="16" height="12" class="address__icon">
               <use href="./images/icons.svg#icon-envelope"></use>
             </svg>
-            <a class="address highlight address__link transition" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+            <a class="address__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </div>
-          <div class="address__section transition address__section--padding">
-            <svg width="16" height="12" class="address__icon highlight transition">
+          <div class="address__section address__section--padding">
+            <svg width="16" height="12" class="address__icon">
               <use href="./images/icons.svg#icon-smartphone"></use>
             </svg>
-            <a class="address address__link highlight transition" href="tel:+48111111111"
-              >+48 111 111 111</a
-            >
+            <a class="address__link" href="tel:+48111111111">+48 111 111 111</a>
           </div>
         </div>
       </div>
@@ -67,20 +63,20 @@
         <div>
           <nav>
             <ul class="buttons">
-              <li><button class="buttons__button highlight" type="button">Wszystkie</button></li>
-              <li><button class="buttons__button highlight" type="button">Strony</button></li>
-              <li><button class="buttons__button highlight" type="button">Aplikacje</button></li>
-              <li><button class="buttons__button highlight" type="button">Dizajn</button></li>
-              <li><button class="buttons__button highlight" type="button">Marketing</button></li>
+              <li><button class="buttons__button" type="button">Wszystkie</button></li>
+              <li><button class="buttons__button" type="button">Strony</button></li>
+              <li><button class="buttons__button" type="button">Aplikacje</button></li>
+              <li><button class="buttons__button" type="button">Dizajn</button></li>
+              <li><button class="buttons__button" type="button">Marketing</button></li>
             </ul>
           </nav>
         </div>
         <div>
           <ul class="portfolio">
-            <li class="portfolio-example transition">
+            <li class="portfolio-example">
               <div class="portfolio-example__overarea">
                 <div class="portfolio-example__area">
-                  <div class="portfolio-example__bluewindow transition">
+                  <div class="portfolio-example__bluewindow">
                     Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
                     koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowski i ataków na
                     niezabezpieczone serwery konkurencji
@@ -104,7 +100,7 @@
             <li class="portfolio-example">
               <div class="portfolio-example__overarea">
                 <div class="portfolio-example__area">
-                  <div class="portfolio-example__bluewindow transition">
+                  <div class="portfolio-example__bluewindow">
                     Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
                     koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowski i ataków na
                     niezabezpieczone serwery konkurencji
@@ -128,7 +124,7 @@
             <li class="portfolio-example">
               <div class="portfolio-example__overarea">
                 <div class="portfolio-example__area">
-                  <div class="portfolio-example__bluewindow transition">
+                  <div class="portfolio-example__bluewindow">
                     Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
                     koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowski i ataków na
                     niezabezpieczone serwery konkurencji
@@ -152,7 +148,7 @@
             <li class="portfolio-example">
               <div class="portfolio-example__overarea">
                 <div class="portfolio-example__area">
-                  <div class="portfolio-example__bluewindow transition">
+                  <div class="portfolio-example__bluewindow">
                     Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
                     koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowski i ataków na
                     niezabezpieczone serwery konkurencji
@@ -176,7 +172,7 @@
             <li class="portfolio-example">
               <div class="portfolio-example__overarea">
                 <div class="portfolio-example__area">
-                  <div class="portfolio-example__bluewindow transition">
+                  <div class="portfolio-example__bluewindow">
                     Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
                     koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowski i ataków na
                     niezabezpieczone serwery konkurencji
@@ -200,7 +196,7 @@
             <li class="portfolio-example">
               <div class="portfolio-example__overarea">
                 <div class="portfolio-example__area">
-                  <div class="portfolio-example__bluewindow transition">
+                  <div class="portfolio-example__bluewindow">
                     Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
                     koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowski i ataków na
                     niezabezpieczone serwery konkurencji
@@ -224,7 +220,7 @@
             <li class="portfolio-example">
               <div class="portfolio-example__overarea">
                 <div class="portfolio-example__area">
-                  <div class="portfolio-example__bluewindow transition">
+                  <div class="portfolio-example__bluewindow">
                     Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
                     koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowski i ataków na
                     niezabezpieczone serwery konkurencji
@@ -248,7 +244,7 @@
             <li class="portfolio-example">
               <div class="portfolio-example__overarea">
                 <div class="portfolio-example__area">
-                  <div class="portfolio-example__bluewindow transition">
+                  <div class="portfolio-example__bluewindow">
                     Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
                     koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowski i ataków na
                     niezabezpieczone serwery konkurencji
@@ -272,7 +268,7 @@
             <li class="portfolio-example">
               <div class="portfolio-example__overarea">
                 <div class="portfolio-example__area">
-                  <div class="portfolio-example__bluewindow transition">
+                  <div class="portfolio-example__bluewindow">
                     Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
                     koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowski i ataków na
                     niezabezpieczone serwery konkurencji
