modified:   portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -294,27 +294,20 @@
       </div>
     </main>
     <footer class="footer">
-      <div class="container footer__area">
-        <div class="container footer__subarea">
+      <div class="footer__area">
+        <div class="footer__subarea">
           <div class="footer__logo--padding">
             <a class="logo" href="#">
-              <span class="logo__web span">Web</span>
-              <span class="span logo__studio logo--whitefont">Studio</span>
+              <span class="logo__web">Web</span>
+              <span class="logo__span logo--whitefont">Studio</span>
             </a>
           </div>
           <address class="footer__addressarea">
-            <div class="highlight footer__address address-white transition">
-              m. Warszawa, Aleje Jerozolimskie 21
-            </div>
-            <a
-              class="highlight transition footer__address address-grey footer__address--padding"
-              href="mailto:info@example.com"
-            >
+            <div class="footer__address">m. Warszawa, Aleje Jerozolimskie 21</div>
+            <a class="footer__address footer__address--padding" href="mailto:info@example.com">
               info@example.com
             </a>
-            <a class="highlight transition footer__address address-grey" href="tel:+48111111111"
-              >+48 111 111 111</a
-            >
+            <a class="footer__address" href="tel:+48111111111">+48 111 111 111</a>
           </address>
         </div>
         <div class="footer__socialarea">
